refactor(course-requirement): just fix minor bug's